# slate

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  SLATE_GRAMMAR.md  adt  ast.c  build  calling.md  codegen.c-old  config.h.in  design.md  errors.md  lexer.h  slate  slate-grammar.md  test  test_math.slate  test_script  vm.c  vm.c-old  vm.h
devdeps/unity/: unity_config.h
examples/: arrays.bitty  arrays.sl  calculator.bitty  control_flow.sl  greeting.bitty  greeting.sl  hello.bitty  infinite_loops.sl  interactive_calculator.bitty  interactive_calculator.slate  iterator_demo.bitty  iterators.bitty  map.slate  number_converter.bitty  objects.bitty  strings.bitty  strings.sl  strings.slate
examples/modules/: demo.sl  demo.slate  simple.sl  test.slate  utils.slate
examples/modules/math/: advanced.sl  basic.sl  constants.sl  constants.slate
include/: ast.h  builtins.h  codegen.h  date.h  datetime.h  error.h  lexer.h  library_assert.h  line_editor.h  module.h  parser.h  runtime_error.h  timezone.h  value.h  vm.h
src/: ast.c  builtins.c  codegen.c  date.c  datetime.c  lexer.c  library_impl.c  line_editor.c  main.c  module.c  parser.c  runtime_error.c  timezone.c  utilities.c  value.c  vm.c
src/classes/ADT/: adt_methods.c  adt_methods.h
src/classes/Array/: array.h  class.c  functional.c  methods.c
src/classes/Boolean/: class_boolean.h  factory.c  methods.c
src/classes/Buffer/: buffer.h  class.c  factory.c  methods.c
src/classes/BufferBuilder/: buffer_builder.c  buffer_builder.h  class.c  factory.c  methods.c
src/classes/BufferReader/: buffer_reader.c  buffer_reader.h
src/classes/Date/: class.c  date_class.h  factory.c  methods.c
src/classes/Float/: class.c  factory.c  float.h  methods.c
src/classes/Instant/: class.c  factory.c  instant.h  methods.c
src/classes/Int/: int.c  int.h
src/classes/Iterator/: iterator.c  iterator.h
src/classes/LocalDate/: class.c  factory.c  local_date.c  local_date.h  methods.c
src/classes/LocalDateTime/: class.c  factory.c  local_datetime.h  methods.c
src/classes/LocalTime/: local_time.c  local_time.h
src/classes/Null/: class.c  class_null.h  methods.c
src/classes/Number/: class.c  methods.c  number.h
src/classes/Object/: class.c  class_object.h  methods.c
src/classes/Range/: range.c  range.h
src/classes/String/: builder.c  class_string.h  factory.c  methods.c  string.h
src/classes/StringBuilder/: string_builder.c  string_builder.h
src/classes/Value/: value.c  value.h
src/classes/Zone/: class.c  factory.c  methods.c  zone.h
src/codegen/: chunk.c  codegen_internal.h  compiler.c  control_flow.c  debug.c  disassembler.c  error.c  expressions.c  functions.c  lifecycle.c  literals.c  operators.c  scope.c  statements.c  utilities.c
src/opcodes/: op_add.c  op_and.c  op_bitwise_and.c  op_bitwise_not.c  op_bitwise_or.c  op_bitwise_xor.c  op_build_array.c  op_build_object.c  op_build_range.c  op_call.c  op_call_adt_base_class.c  op_call_method.c  op_clear_debug_location.c  op_closure.c  op_create_adt_constructor.c  op_decrement.c  op_define_global.c  op_divide.c  op_dup.c  op_equal.c  op_floor_div.c  op_get_export.c  op_get_global.c  op_get_local.c  op_get_property.c  op_get_upvalue.c  op_greater.c  op_greater_equal.c  op_halt.c  op_import_module.c  op_in.c  op_increment.c  op_instanceof.c  op_jump.c  op_jump_if_false.c  op_jump_if_true.c  op_left_shift.c  op_less.c  op_less_equal.c  op_logical_right_shift.c  (+32 more)
src/parser/: declarations.c  expressions.c  parser.c  parser_internal.h  statements.c
src/vm/: constants.c  core.c  debug.c  execution.c  functions.c  iterators.c  lifecycle.c  memory.c  opcodes.c  stack.c  utilities.c  values.c  vm_internal.h
tests/: test_arithmetic.c  test_assignment.c  test_break_statements.c  test_buffer_builder_class.c  test_buffer_class.c  test_builtins.c  test_class_array.c  test_class_date.c  test_class_instant.c  test_class_int.c  test_class_iterator.c  test_class_local_date_time.c  test_class_localdate.c  test_class_localtime.c  test_class_object.c  test_class_range.c  test_class_string.c  test_conditionals.c  test_continue_statements.c  test_data_types.c  test_for_loops.c  test_functions.c  test_helpers.c  test_helpers.h  test_immutable_variables.c  test_infinite_loops.c  test_integers.c  test_lexer.c  test_localdate.c  test_localtime.c  test_logical.c  test_main.c  test_match.c  test_module_system.c  test_nested_loops.c  test_new_operators.c  test_optional_chaining.c  test_parser.c  test_stepped_ranges.c  test_string.c  (+3 more)
tests/modules/: circular_a.sl  circular_b.slate  datatypes.sl  declarations.slate  empty.sl  functions.slate  immutable.sl  lambda_test.sl  lambda_test2.slate  private_mixed.sl  recursive_math.sl  simple.sl  syntax_error.sl  test_debug2.sl  test_debug3.sl  test_lambda_import.slate
tests/modules/submodules/: deeply_nested.sl
tests/unity/: unity.c  unity.h
